feat: added to post

--- a/pages/dailycodetalk/week1.mdx
+++ b/pages/dailycodetalk/week1.mdx
@@ -1,6 +1,7 @@
-## Week of July 24
+## Week of July 23
 
 July 28
 Full Stack Course
 
-- We are learning about backend stuff, getting data from the server using Axios. From my understanding its a module that interprets REST practices and uses promises, in which we need useEffect Hook for.
+- We are learning about backend stuff, getting data from the server using Axios. From my understanding
+its a module that interprets REST practices and uses promises, in which we need useEffect Hook for.
