--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -492,6 +492,15 @@ Next the functionality
 
 -- To be finished... forms section --
 
+### Exercise 2.6 - 2.10
+
+Note: the way to start server is "npm start"
+
+2.6 Was completed by simple debugging and comparing example to my problem
+
+2.7 Problem - prevent the user from being able to add names that already exist in the phonebook.
+
+
 ## Getting data from server
 
 This section will be client-side (broswer) functionality. We will go in to a direction in which we familiarize ourselves
