feat: week3 and added to comm w server section

--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -500,6 +500,10 @@ Note: the way to start server is "npm start"
 
 2.7 Problem - prevent the user from being able to add names that already exist in the phonebook.
 
+- Figure out where the comparison of the two object needs to take place
+
+Ended up creating a variable that uses the .some() method
+
 
 ## Getting data from server
 
