chore: added to week3 and part2

--- a/pages/dailycodetalk/week3.mdx
+++ b/pages/dailycodetalk/week3.mdx
@@ -4,3 +4,16 @@ Aug 7 Monday
 - Continue work on Exercise 2.7
 - Reminder that in order to get good at coding you must code every day, and strive to learn and be better.
 - It is the same thing with training for a marathon.
+
+Aug 8 Tuesday
+- Work on Exercise 2.8
+
+Aug 9 Wednesday
+- Finish Exercise 2.8
+
+Aug 10 Thursday
+- Finish Exercise 2.9 - 2.10
+- A thought popped up and made me think, most of programming is utializing the same functions, like a filter function, so there is no need to memorize everything.
+- The pros and cons of chatgpt
+- .some() vs .filter()
+
