feat: added more notes

--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -1,6 +1,6 @@
 # Communicating With Server
 
-## Rendering a collection, modules
+## Part A - Rendering a collection, modules
 
 I've done this multiple times, but say we have a array or an object. And we want to display it or something. The course talks over
 how to parse thru that using map and how the key attribute should not be array indexes, because it will cuase errors in the long run.
@@ -350,7 +350,7 @@ The part component just takes in the name and number of exercises as props and r
 Next the Total component takes in parts as a prop, and then calculates the total number of exercises for each course using the
 array function reduce.
 
-## Forms
+##  Part B - Forms
 
 Expanding the application in the previous sections
 Then we add an HTML form to the component that will be used to add new notes.
@@ -544,7 +544,7 @@ const App = () => {
 
 So we need 3 seperate components: 'Filter', 'PersonForm' and 'PersonList'.
 
-## Getting data from server
+## Part C - Getting data from server
 
 This section will be client-side (broswer) functionality. We will go in to a direction in which we familiarize ourselves
 with how the code executing in the broswer communicates with the backend.
@@ -570,7 +570,7 @@ We will get more familiar with the princiles of implimenting server-side functio
 
 Goes over using the outdated way of fetching data that was used in part 0 using XMLHttRequest.
 
-## npm
+### npm
 
 In this course we will be using the axios library for communication between the browser and server.
 
@@ -603,7 +603,7 @@ Command to start server now
 npm run server
 ```
 
-## Axios and promises
+### Axios and promises
 
 Going forward json-server is assumed to be running in port 3001
 
@@ -654,7 +654,7 @@ axios
   })
 ```
 
-## Effect-Hooks
+### Effect-Hooks
 
 With the Effect Hook inserted in the code, the following is printed to the console:
 
@@ -675,4 +675,138 @@ response => {
 }
 ```
 
-When the data arrives from the server, the JavaScript runtime calls the function registered as the event handler
+When the data arrives from the server, the JavaScript runtime calls the function registered as the event handler, which
+prints promise and fulfilled to the console and stores the notes recieve from the server in to the state using the function
+setNotes (response.data).
+
+As always, a call to state-updating function triggers the re-rendering of the component. Render 3 notes is printed to the console
+and the notes are fetched from the server and are rendered.
+
+Rewriting the code a bit differently
+
+```js
+const hook = () => {
+  console.log('effect')
+  axios
+    .get('http://localhost:3001/notes')
+    .then(response => {
+      console.log('promise fulfilled')
+      setNotes(response.data)
+    })
+}
+
+useEffect(hook, [])
+```
+
+useEffect takes two parameters. The first is a function, the effect itself.
+
+The second parameter of useEffect is used to specify how often the effect is run. If empty array, then the effect is only run along the
+first render of the component.
+
+Another way we could have written the code is shown below:
+
+```js
+useEffect(() => {
+  console.log('effect')
+
+  const eventHandler = response => {
+    console.log('promise fulfilled')
+    setNotes(response.data)
+  }
+
+  const promise = axios.get('http://localhost:3001/notes')
+  promise.then(eventHandler)
+}, [])
+```
+
+A reference to an event handler function is assigned to the variable eventHandler. The promise returned by the get method of
+Axios is stored in the variable promise. The registration of the callback happens by giving the eventHandler variable, referring to the event-handler
+function, as a parameter to the then method of the promise. It isn't usually necessary to assign functions and promises to variables, and a more compact
+way of representing things, as seen further above, is sufficient.
+
+We still run to a problem wiht our application, when adding new notes they are not stored on the server.
+
+### The development runtime enviornment
+
+The configuration for the whole application has steadly grown more complex. Lets review what happens and where.
+
+The JavaScript code making up our React application is run in the broswer.
+The broswer getes the JavaScript from the React dev server, which is the application that runs after running the command npm start.
+The dev-server transforms the JavaScript into a format understood by the browser.
+Among other things, it stiches together JavaScript from different files into one file.
+The React application running in the browswer fetches the JSON formated data from json-server runnign on port 3001 on the machine.
+The server we query the data from - json-server - gets its data from the file db.json.
+
+At this point in the development, all the parts of the application reside on the localhost, in the next part we will deploy it to the internet.
+
+### Exercise 2.11
+
+## Part D - Altering data in server
+
+In this section we will look at some conventions used by json-server and REST APIs in general.
+In particular, we will be taking a look at the conventional use of routes, aka URLs and HTTP request types, in REST.
+
+### REST
+
+In REST terminology, we refer to individual data objects, such as notes in our application, as recources. 
+Every resource has a unique addresss associated with its URL. We would be able to locate an individual note at the recourse URL
+notes/3, where 3 is the id of the resource. The notes URL on the other hand would point to a resource collection containing all the notes.
+
+Resources are fetched from the server with HTTP GET request.
+
+Creating a new resource for storing a note is done by making an HTTP POST request to the notes URL according to the REST
+convention that the json-server adheres to. The data for the new note resource is sent in the body of the request.
+
+json-server requires all data to be sent in JSON format. The data must be correctly formatted string and that the request must contain the
+Content-Type request header with the value application/json.
+
+## Sending Data to the Server
+
+Adding the following changes to the event handler responsible for creating a new note:
+
+```js
+...
+  axios
+    .post('http://localhost:3001/notes', noteObject)
+    .then(response => {
+      console.log(response)
+    })
+...
+```
+
+We create a new object for the note but omit the id property, to let the server generate ids for our resources.
+The object is sent to the server using the axios post method. The registered event handler logs the response that is sent back
+from the server to the console.
+
+Note that we now omit the id property in the code above
+
+The payload tab can be used to check the request data along with the response tab, which can show what was the data the server reponded with
+
+Important detail to remember is that concat method does not change the components original state, bute instead creates a new copy of the list.
+Next part we will use tools like Postman that helps us to debug our server applications
+
+## Changing the Importance of Notes
+
+Lets add a button to every note that can be used for toggling its importance
+
+Changing the Note component:
+
+```js
+const Note = ({ note, toggleImportance }) => {
+  const label = note.important
+    ? 'make not important' : 'make important'
+
+  return (
+    <li>
+      {note.content} 
+      <button onClick={toggleImportance}>{label}</button>
+    </li>
+  )
+}
+```
+
+We add a button to the component and assign its event handler as the toggleImportance function passed in the components props.
+
+Individual notes stored in the json-server backend can be modified in two different ways by making HTTP request to the the note's unique URL.
+We can replace the entire note with an HTTP PUT request or only change some of the note's properties with an HTTP PATCH request.
+
