--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -810,3 +810,21 @@ We add a button to the component and assign its event handler as the toggleImpor
 Individual notes stored in the json-server backend can be modified in two different ways by making HTTP request to the the note's unique URL.
 We can replace the entire note with an HTTP PUT request or only change some of the note's properties with an HTTP PATCH request.
 
+The final form of the event handler function is the following: 
+
+```js
+const toggleImportanceOf = id => {
+  const url = `http://localhost:3001/notes/${id}`
+  const note = notes.find(n => n.id === id)
+  const changedNote = { ...note, important: !note.important }
+
+  axios.put(url, changedNote).then(response => {
+    setNotes(notes.map(n => n.id !== id ? n : response.data))
+  })
+}
+```
+
+Explaining the code
+
+The first line defines the unique URL for each note resource based on its id.
+The array find method is used to find the note we want to modify, and we then assign it to the note variable
