--- a/pages/dailycodetalk/week6.mdx
+++ b/pages/dailycodetalk/week6.mdx
@@ -22,3 +22,19 @@ marathon prep in to coding.
 Tuesday Aug 29
 
 - finishing final form of the event handler function
+
+Wednesday Aug 30
+
+Thursday Aug 31
+
+- Initial Reading
+- Hands on practice
+- Note Taking
+- Break It Down
+
+### Random Idea
+
+Strava but for programmers to document their learning journey
+- Its hard to see progress when coding because there is so much that I feel like I need to learning
+
+
