--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -760,7 +760,7 @@ convention that the json-server adheres to. The data for the new note resource i
 json-server requires all data to be sent in JSON format. The data must be correctly formatted string and that the request must contain the
 Content-Type request header with the value application/json.
 
-## Sending Data to the Server
+### Sending Data to the Server
 
 Adding the following changes to the event handler responsible for creating a new note:
 
@@ -785,7 +785,7 @@ The payload tab can be used to check the request data along with the response ta
 Important detail to remember is that concat method does not change the components original state, bute instead creates a new copy of the list.
 Next part we will use tools like Postman that helps us to debug our server applications
 
-## Changing the Importance of Notes
+### Changing the Importance of Notes
 
 Lets add a button to every note that can be used for toggling its importance
 
@@ -831,9 +831,49 @@ The array find method is used to find the note we want to modify, and we then as
 After we create a new object that is an exact copy of the old note, apart from the important property that has the value flipped.
 
 
-## Promises and Errors
+### Promises and Errors
 
 To allow users to delete notes, we need to clear the situation in which a user tries to change the importance of the note that has already
 been deleted from the system.
 
 Common way of adding a handler for rejected promises is to use catch method.
+
+In practice, the error handler for the rejected promises is defined like this:
+
+```js
+axios
+  .get('http://example.com/probably_will_fail')
+  .then(response => {
+    console.log('success!')
+  })
+  .catch(error => {
+    console.log('fail')
+  })
+```
+
+If the request fails, the event handler registered with the catch method gets called.
+The catch method is often utilized by placing in deeper within the promise chain.
+
+### Full stack developer's oath
+
+Full stack development is extremely hard, that is why I will use all the possible means to make it easier
+
+I will have my browser developer console open all the time
+
+I will use the network tab of the browser dev tools to ensure that frontend and backend are communicating as I expect
+
+I will constantly keep an eye on the state of the server to make sure that the data sent there by the frontend is saved there as I expect
+
+I progress with small steps
+
+I will write lots of console.log statements to make sure I understand how the code behaves and to help pinpoint problems
+
+If my code does not work, I will not write more code. Instead, I start deleting the code until it works or just return to a state when everything was still working
+
+When I ask for help in the course Discord or Telegram channel or elsewhere I formulate my questions properly, see here how to ask for help
+
+### Exercises 2.12-2.15
+
+## 2.12
+
+Currently, the numbers that are added to the phonebook are not saved to a backend server. Fix this situation.
