--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -741,6 +741,10 @@ At this point in the development, all the parts of the application reside on the
 
 ### Exercise 2.11
 
+The Phonebook Step6
+
+We continue with developing the phonebook. Store the initial state of the application in the file db.json, which should be placed in the root of the project.
+
 ## Part D - Altering data in server
 
 In this section we will look at some conventions used by json-server and REST APIs in general.
@@ -874,6 +878,6 @@ When I ask for help in the course Discord or Telegram channel or elsewhere I for
 
 ### Exercises 2.12-2.15
 
-## 2.12
+### 2.12
 
 Currently, the numbers that are added to the phonebook are not saved to a backend server. Fix this situation.
