feat: add weeks and notes

--- a/pages/fullstackopen/part2-commwserver.mdx
+++ b/pages/fullstackopen/part2-commwserver.mdx
@@ -937,3 +937,17 @@ Make it possible for users to delete entries from the phonebook. The deletion ca
 You can confirm the action from the user by using the window.confirm method
 
 Since each individual person needs a button to delete it is best to go in to PersonList component
+
+- Create a button in each person
+- Create a handleDelete function
+
+2.15 (To be continued)
+
+## Part E - Adding styles to React
+
+Using className attribute
+
+### Improved error message
+
+### Inline Styles
+CSS properties are typically written in camelCase
