--- a/pages/styling/tailwindcss.mdx
+++ b/pages/styling/tailwindcss.mdx
@@ -1,4 +1,11 @@
 # Tailwind CSS
 
 ## Why use Tailwind?
-It provides reusable styling and components that I can use between multiple websites. Combining CSS best practices with Tailwind helps supress all the 
+It provides reusable styling and components that I can use between multiple websites.
+Combining CSS best practices with Tailwind helps supress all the 
+
+## Tailwind Play
+
+```html
+<div class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gray-50 py-6 sm:py-12"></div>
+```
